CSS/Mail: Fix missing margin for list of attachments
This PR adds a `margin-left` for the attachment list
in the mail form.
Furthermore, I used the UI framework to present the list, not custom HTML in the template.

See: https://mantis.ilias.de/view.php?id=40440

--- a/templates/default/070-components/legacy/Services/_component_mail.scss
+++ b/templates/default/070-components/legacy/Services/_component_mail.scss
@@ -58,3 +58,7 @@ a.mailunread, a.mailunread:visited {
 		}
 	}
 }
+
+#form_mail_compose_form #il_prop_cont_m_attachment ul {
+	margin-left: 16px;
+}
